retirando um elemento

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,10 +98,11 @@
         android:layout_height="wrap_content"
         android:text="Button"
         app:layout_constraintBottom_toTopOf="@+id/h3"
-        app:layout_constraintTop_toTopOf="@+id/h2"
         app:layout_constraintEnd_toEndOf="@+id/v2"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/v1"
-        app:layout_constraintVertical_bias=".9"/>
+        app:layout_constraintTop_toTopOf="@+id/h2"
+        app:layout_constraintVertical_bias="0.488" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -132,14 +133,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
-
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/h1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
